# RECOR

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODOS.md  deny.toml  justfile  mise.toml  package.json  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml
apps/audit-reconciler/: Cargo.toml  Dockerfile
apps/audit-reconciler/src/: config.rs  handlers.rs  lib.rs  main.rs  metrics.rs  reconciler.rs  repo.rs
apps/audit-reconciler/tests/: fabric_reconciliation_integration.rs
apps/audit-verifier/: Cargo.toml  Dockerfile
apps/audit-verifier/src/: auth.rs  config.rs  fabric_client.rs  handlers.rs  hashing.rs  lib.rs  main.rs  projection.rs  report.rs
apps/audit-verifier/tests/: payload_scoping.rs
apps/sanctions-ingest/: Cargo.toml  Dockerfile
apps/sanctions-ingest/src/: canonical.rs  eu.rs  icij.rs  ingest_log.rs  lib.rs  ofac.rs  sanity_check.rs  un.rs
apps/sanctions-ingest/tests/: full_flow.rs
apps/worker-fabric-bridge/: Cargo.toml  Dockerfile
apps/worker-fabric-bridge/migrations/: 0001_create_fabric_bridge_dlq.sql
apps/worker-fabric-bridge/src/: config.rs  dlq.rs  handlers.rs  lib.rs  main.rs  metrics.rs  processor.rs
apps/worker-fabric-bridge/tests/: processor_integration.rs
services/declaration/: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.integration.yaml  docker-compose.kafka.yaml  docker-compose.yaml  rust-toolchain.toml
services/declaration/.sqlx/: query-08dd49a43976eab39b8b451c7a73179bc434f2acbe4429365c03180872bf0171.json  query-0b6a23d3ae9eb49b3ee0fa4dbf1b2c849b985220f1b704f93b34c6320ec816f7.json  query-1061777394e6cbc90973de2a2007aaf337426a01ef81793468a12326bce0248c.json  query-14261d63ae6c1fd72322f798964144f8b07ea3f421829db1cef93839ee0acf62.json  query-247e67a83acbb8178b1870f0711c52a38c9caffc0e9fd0d786667f092375eae4.json  query-2573240f4ffc757c1bcac75611bb01d2bb8ec0e0fb58aaf5f13f49561c2e3fc3.json  query-3303c32244b8055eed85e9cd6d12e0338b0bb4916f76216602e89daab1ac7458.json  query-3b1a17ccc7d1fe449b2868034cfc1da3fdf6cbb470ea530c33ab29dc5a288799.json  query-3b367cec477382d1767ab237d0d9d6f811d3276fa45b469f46bcc70ec4092f9d.json  query-3fce868f26fa3a220379653741700c8c4ae026fb3170edf79de0475d621bbb83.json  query-4a15bb45bf20fd72eb2779be6672ec4b05f83366fb1faada1d2b4a94f6fa2676.json  query-703ddbfb31c32edd209bcbcaa6454fd985744d53b8e784d7adf3a467528bd431.json  query-771c69aa091a2f2acebfa16d3924de5964b6f61008189a7e44a89a5d16069fab.json  query-7ecb7058ffde1b7c490ecd99390ae1782c582eb016bd128f265ba528790f6d84.json  query-8d1a78b4d80ea0426c5358c0e42cf7a09cb17501737ac8df408c06a637401f2c.json  query-8e5f2d8a9e8274b3632248d97616d52b671e8f7e3a82b0312ead0caa56bab380.json  query-94c07563a5c6d2bf6cbb48e543a574bd0c79432c33907291b89422545f4ab047.json  query-9a90ed6665b9b2eba61a59dd1bc63a3e9f5f25fb87dae62b8f9816bd267b5877.json  query-9d08590a41f32f008923ab14135da445bb46e506d90280b16c7b30828e1f58f7.json  query-9ff6c9858cab07a64f02b9a1cf2216160169483fe87bfac6a9c7ee70d61eb19a.json  query-b734d70be5de3606702cee5859cc9d78673957f6c86275d8bacbb3a633dbada2.json  query-bc4c42e9a74fefb47b669b0275e42e020a79511ea6b9d95392d1709048e64226.json  query-c60bf92d74514d3a2f138f463ca586093401fb68042ff85740861aeb3e67daab.json  query-cac18c60350dcdf143d36f17b702bdf0e10541709d9185b8eb531015bc6dec43.json  query-cb40e98cf9f612bd1fc2ec7d78da379ce87ce9bca027f9d9debf8b662fee1ad9.json  query-de50e70df1c8b8526f72355cc6252aa9f2faef431c6d53de9b0b5cce251718fa.json
services/declaration/fuzz/: Cargo.toml
services/declaration/migrations/: 0001_initial.sql  0002_add_verification_state.sql  0003_add_verification_outcome_columns.sql  0004_add_supersede_chain.sql  0005_add_outbox_dlq.sql  0006_add_correction_columns.sql  0007_audit_log_immutability.sql  0008_attestation_nonce_uniqueness.sql  0009_fatf_cascade_and_adequacy.sql  0010_last_event_observed_at.sql  0011_discrepancies.sql  0012_fiu_disclosure_log.sql  0013_public_feedback_log.sql  0014_sanctions_proceedings.sql  0015_arrangement_subject.sql  0015_sanction_discrepancy_link.sql  0016_sanction_appeals.sql  0017_obliged_entity_access_log.sql  0018_rectification_requests.sql  0019_erasure_restrictions.sql  0020_gdpr_processing_register.sql  0021_gdpr_seed_initial_records.sql
services/declaration/scripts/: dlq-smoke.sh  integration-smoke.sh  kafka-smoke.sh  mtls-smoke.sh  smoke.sh
services/declaration/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  observability.rs
services/declaration/tests/: api_integration.rs  attestation_nonce_replay.rs  audit_immutability.rs  grpc_integration.rs  kafka_integration.rs  kafka_producer_integration.rs  log_redaction_integration.rs  oidc_integration.rs  postgres_adapter_integration.rs  rate_limit_integration.rs  rest_integration.rs  writeback_contract.rs
services/entity-service/: CLAUDE.md  Cargo.toml  Dockerfile
services/entity-service/.sqlx/: query-1388f6feca1ddd34b165c4f8c1ccf85b07ac66d99f4406b772c311f6df80b269.json  query-1a448e7aad7d55b90d1500cc460be7ffa9007ba38d3a831aa6d5d8242be4b61d.json  query-2ff32880b13e523ba15dda142f01a536a1bcaf0fe22e7e32746b60df141a775a.json  query-3e45cbe2735e30d6a4a3160d0ac4af6455af07985f88f21cea323fc5fb0ba92a.json  query-477a868030507301c6364816b43e1d28a4a3c4f935bd8e49aa6138be6d329da9.json  query-4ea6a0ab54ca4809ea6716b49a3fd6de5bcb5f4184bbadf10d7f2c8e293d8a07.json  query-5ce2a31aa0c55c3a26db586939561ea24a84914cca8ceea12e938e5f606ba71b.json  query-6c3d89f22974937dced1b4c711650333dcf92bc1e3f09e306bfa4c37bfd43695.json  (+7 more)
services/person-service/: CLAUDE.md  Cargo.toml  Dockerfile
services/verification-engine/: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rust-toolchain.toml
tests/contract/: Cargo.toml  anif.contract.json  codeowners.test.sh  conac.contract.json  observability-smoke.test.sh  public.contract.json
tools/recor-cli/: Cargo.toml
(+559 files in other folders)
