# RÉCOR monorepo workspace root.
#
# Closes R-DECL-6 / #10. Brings both services and any future shared
# crates under a single Cargo workspace so:
#   1. Dependency versions are declared once in [workspace.dependencies]
#      and inherited by each member crate (no version drift between
#      services).
#   2. Cross-crate sharing becomes possible (the immediate consumer is
#      R-AUTH-1 / #46 — the shared recor-auth-oidc crate that eliminates
#      the duplicated OIDC verifier in both services).
#   3. `cargo build` / `cargo test` / `cargo clippy` at the repo root
#      operate over the whole graph in one command.
#
# Adding a new member: add it to `workspace.members` below and reference
# the workspace deps it needs via `dep.workspace = true` in its own
# Cargo.toml. New shared crates go under `packages/`; new services go
# under `services/`.

[workspace]
resolver = "2"
members = [
    "packages/recor-auth-oidc",
    "services/declaration",
    "services/verification-engine",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

# Centralised dependency versions. Each member declares
# `<dep>.workspace = true` rather than re-pinning the version.
[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP server stack
axum = { version = "0.8", features = ["macros", "tracing"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout"] }
http = "1.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto / IDs
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }
blake3 = "1.5"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }

# Config + secrets
config = { version = "0.15", default-features = false, features = ["toml"] }
secrecy = { version = "0.10", features = ["serde"] }

# Misc
async-trait = "0.1"
dotenvy = "0.15"

# Service-to-service auth (outbox-relay HMAC + inbound webhook verification)
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Rate limiting (OPS-1). Token-bucket via tower-governor; we key the
# limiter on the authenticated Principal::subject — see
# `services/declaration/src/api/rate_limit.rs`. We also pull in the
# underlying `governor` crate directly so we can name middleware types
# (e.g. `NoOpMiddleware`) on our wrapper.
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
governor = "0.10"

# OIDC: RS256/ES256/EdDSA JWT signature + claim verification, JWKS fetching.
jsonwebtoken = "9"
# LRU cache for verified tokens (R-AUTH-4).
lru = "0.12"

# Test deps (used by member crates' [dev-dependencies])
proptest = "1.5"
rstest = "0.23"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"
