# RÉCOR monorepo workspace root.
#
# Closes R-DECL-6 / #10. Brings both services and any future shared
# crates under a single Cargo workspace so:
#   1. Dependency versions are declared once in [workspace.dependencies]
#      and inherited by each member crate (no version drift between
#      services).
#   2. Cross-crate sharing becomes possible (the immediate consumer is
#      R-AUTH-1 / #46 — the shared recor-auth-oidc crate that eliminates
#      the duplicated OIDC verifier in both services).
#   3. `cargo build` / `cargo test` / `cargo clippy` at the repo root
#      operate over the whole graph in one command.
#
# Adding a new member: add it to `workspace.members` below and reference
# the workspace deps it needs via `dep.workspace = true` in its own
# Cargo.toml. New shared crates go under `packages/`; new services go
# under `services/`.

[workspace]
resolver = "2"
members = [
    "packages/recor-auth-oidc",
    "packages/recor-logging",
    "services/declaration",
    "services/entity-service",
    "services/verification-engine",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

# Centralised dependency versions. Each member declares
# `<dep>.workspace = true` rather than re-pinning the version.
[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP server stack
axum = { version = "0.8", features = ["macros", "tracing"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout"] }
http = "1.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto / IDs
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }
blake3 = "1.5"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }

# OBS-1: Prometheus metrics. The `prometheus` crate provides a Registry +
# Counter/Gauge/Histogram primitives that we expose at `/metrics` in
# Prometheus text exposition format (Content-Type
# `text/plain; version=0.0.4`). One Registry per service; metrics live in
# `services/<name>/src/metrics.rs`. Default features are kept (`process` +
# `pull` are not in this crate's default set; we only need the registry +
# encoder which are always-on). D18: only bounded-enum label values are
# permitted — see the metrics module docs for the policy.
prometheus = "0.14"

# Config + secrets
config = { version = "0.15", default-features = false, features = ["toml"] }
secrecy = { version = "0.10", features = ["serde"] }

# Misc
async-trait = "0.1"
dotenvy = "0.15"

# Service-to-service auth (outbox-relay HMAC + inbound webhook verification)
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Rate limiting (OPS-1). Token-bucket via tower-governor; we key the
# limiter on the authenticated Principal::subject — see
# `services/declaration/src/api/rate_limit.rs`. We also pull in the
# underlying `governor` crate directly so we can name middleware types
# (e.g. `NoOpMiddleware`) on our wrapper.
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
governor = "0.10"

# OIDC: RS256/ES256/EdDSA JWT signature + claim verification, JWKS fetching.
jsonwebtoken = "9"
# LRU cache for verified tokens (R-AUTH-4).
lru = "0.12"

# OpenAPI 3.1 spec generation (DOC-1 / #70). Annotates the axum handlers
# and DTOs in services/declaration; consumers (notably the declarant
# portal under R-PORT-7) regenerate their typed clients from the spec
# emitted at GET /openapi.json. `utoipa-scalar` mounts the Scalar UI at
# GET /docs. We're on utoipa 5.x because that's the line that supports
# axum 0.8 + edition 2024; older lines pin to axum 0.7. The "axum_extras"
# feature wires the `#[utoipa::path]` macro into axum routing types so
# we can express `Path<Uuid>` etc. directly. V-engine's spec is deferred
# to a follow-up — TODO(R-VER-OPENAPI) in services/verification-engine.
utoipa = { version = "5", features = ["axum_extras", "uuid", "time"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# gRPC surface (R-DECL-8 / #78). tonic provides the runtime; tonic-build
# generates Rust client + server stubs from contracts/declaration.proto
# at build time; prost is the wire codec. Versions track the prost 0.13
# line — tonic 0.13.x is the matching release. The OIDC interceptor
# lives in services/declaration/src/api/grpc.rs. The .proto under
# contracts/ is the source of truth for the gRPC surface; Rust types
# derive from it. REST DTOs stay hand-written under utoipa (different
# transport, different shape; see services/declaration/CLAUDE.md for
# the OpenAPI-exemption rationale).
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"

# Test deps (used by member crates' [dev-dependencies])
proptest = "1.5"
rstest = "0.23"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"
