[package]
name = "recor-sanctions-ingest"
description = "RÉCOR sanctions / PEP / ICIJ ingestion worker — scheduled feed pulls into the verification engine's screening tables, with provenance + sanity-check guards. TODO-014."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "recor-sanctions-ingest-ofac"
path = "src/bin/ofac.rs"

[[bin]]
name = "recor-sanctions-ingest-eu"
path = "src/bin/eu.rs"

[[bin]]
name = "recor-sanctions-ingest-un"
path = "src/bin/un.rs"

[[bin]]
name = "recor-sanctions-ingest-icij"
path = "src/bin/icij.rs"

[lib]
name = "recor_sanctions_ingest"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
secrecy.workspace = true
config.workspace = true
dotenvy.workspace = true
time.workspace = true
uuid.workspace = true
hex.workspace = true
blake3.workspace = true
reqwest.workspace = true
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"

[dev-dependencies]
tempfile = "3.10"
testcontainers.workspace = true
testcontainers-modules.workspace = true
