[package]
name = "worker-fabric-bridge"
description = "RÉCOR background worker that consumes declaration events from the outbox-relay channel and anchors each to the Hyperledger Fabric audit channel via the fabric-bridge crate. Writes permanent failures to fabric_bridge_dlq; emits OBS-1 Prometheus metrics."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "worker-fabric-bridge"
path = "src/main.rs"

[lib]
name = "worker_fabric_bridge"
path = "src/lib.rs"

[dependencies]
fabric-bridge = { path = "../../packages/fabric-bridge" }
recor-logging = { path = "../../packages/recor-logging" }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# HTTP server (health + metrics)
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database (DLQ + inbound HTTP receiver state)
sqlx.workspace = true

# Serialisation
serde.workspace = true
serde_json.workspace = true

# Crypto / IDs
uuid.workspace = true
time.workspace = true
hex.workspace = true

# Errors
thiserror.workspace = true
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

# Config
config.workspace = true
secrecy.workspace = true
dotenvy.workspace = true
hmac.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
