[package]
name = "recor-declaration"
# Edition 2024 (the Architecture V3 P8 commitment) requires Rust 1.85.0+,
# but V3 P12 currently pins to 1.84.0 — an internal inconsistency in the
# Companion. Edition 2021 is used here as the largest stable subset until
# the toolchain pin is bumped to 1.85+. See R-LANG-1 follow-up.
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
description = "RÉCOR Declaration service — beneficial-ownership declaration intake and lifecycle"
license = "Apache-2.0"
publish = false

[[bin]]
name = "recor-declaration"
path = "src/main.rs"

[lib]
name = "recor_declaration"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP server
axum = { version = "0.8", features = ["macros", "tracing"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout", "compression-gzip"] }
http = "1.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }
blake3 = "1.5"
base64 = "0.22"
hex = "0.4"

# Identity / value objects
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.27"

# Config
config = { version = "0.15", default-features = false, features = ["toml"] }
secrecy = { version = "0.10", features = ["serde"] }

# Misc
async-trait = "0.1"
futures = "0.3"
dotenvy = "0.15"

# Outbox relay: HMAC-signed HTTP webhooks
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
proptest = "1.5"
rstest = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
serde_path_to_error = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"
