[package]
name = "recor-declaration"
description = "RÉCOR Declaration service — beneficial-ownership declaration intake and lifecycle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "recor-declaration"
path = "src/main.rs"

[lib]
name = "recor_declaration"
path = "src/lib.rs"

[dependencies]
# Shared workspace crates.
recor-auth-oidc = { path = "../../packages/recor-auth-oidc" }
recor-logging = { path = "../../packages/recor-logging" }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout", "compression-gzip"] }
http.workspace = true

# Database
sqlx.workspace = true

# Serialisation
serde.workspace = true
serde_json.workspace = true
serde_with = "3"

# Cryptography
ed25519-dalek.workspace = true
blake3.workspace = true
base64.workspace = true
hex.workspace = true

# Identity / value objects
uuid.workspace = true
time.workspace = true

# Errors
thiserror.workspace = true
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions = "0.27"

# Config
config.workspace = true
secrecy.workspace = true

# Misc
async-trait.workspace = true
futures = "0.3"
dotenvy.workspace = true

# Outbox relay: HMAC-signed HTTP webhooks
hmac.workspace = true
sha2.workspace = true
reqwest.workspace = true

# Rate limiting (OPS-1)
tower_governor.workspace = true
governor.workspace = true

# Note: jsonwebtoken + lru are consumed transitively via recor-auth-oidc;
# they're still declared here when needed by code outside the verifier.

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
reqwest.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
serde_path_to_error = "0.1"
ed25519-dalek.workspace = true
jsonwebtoken.workspace = true
# Used in rate_limit unit tests to read response bodies.
http-body-util = "0.1"
