[package]
name = "recor-person-service"
description = "RÉCOR Person service — canonical natural-person registry anchoring beneficial-owner identities"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "recor-person-service"
path = "src/main.rs"

# DOC-1 mirror: stand-alone binary that prints the OpenAPI 3.1 spec
# to stdout. Used by `tools/ci/check-openapi-drift.sh` (when added for
# this service) to regenerate the committed snapshot without booting
# the service. Pure: no DB, no network.
[[bin]]
name = "dump-openapi-person"
path = "src/bin/dump-openapi.rs"

[lib]
name = "recor_person_service"
path = "src/lib.rs"

[dependencies]
# Shared workspace crates.
recor-auth-oidc = { path = "../../packages/recor-auth-oidc" }
# FIND-018: shared HMAC sign/verify with iat-bound replay window —
# pulled in for symmetry with declaration / V-engine / fabric-bridge,
# even though no internal-HMAC endpoint exists yet. The config
# surface for it is declared so a future inbound webhook can opt in
# without another dependency-graph change.
recor-hmac-sig = { path = "../../packages/recor-hmac-sig" }
recor-logging = { path = "../../packages/recor-logging" }
# FIND-018 (audit Sprint 3) / R-LOOP-3: SPIFFE Workload API client +
# rustls glue. Bootstrap-only today; the inbound TLS layer + peer-ID
# gate land in the R-LOOP-3-followup wiring.
recor-spiffe = { path = "../../packages/recor-spiffe" }
# FIND-018 / OPS-4: Vault client. Optional at runtime; required
# (D14 fail-closed) when VAULT_ADDR is set.
recor-vault-client = { path = "../../packages/recor-vault-client" }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout", "compression-gzip"] }
http.workspace = true

# Database
sqlx.workspace = true

# Serialisation
serde.workspace = true
serde_json.workspace = true

# Identity / value objects
uuid.workspace = true
time.workspace = true

# Crypto (BLAKE3 for receipt-style hashing on event payloads)
blake3.workspace = true
hex.workspace = true

# Errors
thiserror.workspace = true
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
prometheus.workspace = true

# Config
config.workspace = true
secrecy.workspace = true

# Misc
async-trait.workspace = true
futures = "0.3"
dotenvy.workspace = true

# TODO-040: outbox relay HTTP delivery. The HMAC sign helper lives in
# `recor-hmac-sig` (already pulled in for cross-service shape). Keeping
# hmac/sha2 declared makes a future inbound-internal webhook trivial to
# add without another Cargo.toml change.
hmac.workspace = true
sha2.workspace = true
reqwest.workspace = true

# OpenAPI 3.1 spec generation (DOC-1).
utoipa.workspace = true
utoipa-scalar.workspace = true

[dev-dependencies]
rstest.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
reqwest.workspace = true
http-body-util = "0.1"
