[package]
name = "recor-verification-engine"
description = "RÉCOR Verification Engine — 9-stage adversarial pipeline over declared beneficial ownership"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "recor-verification-engine"
path = "src/main.rs"

[lib]
name = "recor_verification_engine"
path = "src/lib.rs"

[dependencies]
# Shared workspace crates.
recor-auth-oidc = { path = "../../packages/recor-auth-oidc" }
recor-inference-gateway = { path = "../../packages/recor-inference-gateway" }
recor-logging = { path = "../../packages/recor-logging" }

tokio.workspace = true
tokio-util.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true

sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true

uuid.workspace = true
time.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
# OBS-1: Prometheus metrics. See services/verification-engine/src/metrics.rs.
prometheus.workspace = true

config.workspace = true
secrecy.workspace = true

async-trait.workspace = true
dotenvy.workspace = true
base64.workspace = true
hex.workspace = true
blake3.workspace = true

# Inbound webhook HMAC verification AND outbox-relay outbound HMAC signing
hmac.workspace = true
sha2.workspace = true

# Outbox relay HTTP client + cancellation token
reqwest.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
reqwest.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
ed25519-dalek.workspace = true
jsonwebtoken.workspace = true
