[package]
name = "recor-cli"
description = "RÉCOR operator CLI — health, verify, sanctions search, DLQ admin. The bootstrap-time companion to the platform services."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "recor-cli"
path = "src/main.rs"

[lib]
name = "recor_cli"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client
reqwest.workspace = true

# Serialisation
serde.workspace = true
serde_json.workspace = true

# Errors
anyhow.workspace = true

# Observability (structured logs by default)
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
